# microphone-array-library-for-pico

./: CMakeLists.txt  README.md
examples/hello_microphone_array/: CMakeLists.txt  README.md  main.c  main.h
examples/sk9822/: CMakeLists.txt  main.c  main.h
examples/usb_microphone_array/: CMakeLists.txt  main.c  main.h
examples/usb_microphone_array_led/: CMakeLists.txt  main.c  main.h
src/: microphone_array_i2s.c  microphone_array_i2s.pio  sk9822.c  sk9822.pio  sk9822_led_animation.c
src/include/pico/: microphone_array_i2s.h  sk9822.h  sk9822_led_animation.h  volume_ctrl.hpp
